--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook": "^9.0.12",
     "react-router": "^6.26.0",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-social-media-embed": "^2.5.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
